[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/rooms/CommsRoom.gd" type="Script" id=1]
[ext_resource path="res://scenes/RoomBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/room_outline_16x32.png" type="Texture" id=3]
[ext_resource path="res://sprites/room_floor_16x32.png" type="Texture" id=4]
[ext_resource path="res://sprites/Rooms_Comms_Overlay.png" type="Texture" id=5]
[ext_resource path="res://sprites/Rooms_Comms_Overlay_Active .png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Flashing"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RoomOverlying:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 9.07298e-06, 2.19096e-06 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 5 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.93271, 16.1626 )

[sub_resource type="CircleShape2D" id=3]

[node name="CommsRoom" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]
anims/Flashing = SubResource( 1 )

[node name="RoomUnderlying" parent="." index="1"]
texture = ExtResource( 4 )

[node name="RoomOverlying" parent="." index="2"]
texture = ExtResource( 5 )

[node name="RoomOutline-maybe-shader" parent="." index="3"]
z_index = 2
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="RoomHover" index="0"]
shape = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer" index="0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 403.0
margin_bottom = 197.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer" index="0"]
margin_left = 196.0
margin_top = 93.0
margin_right = 196.0
margin_bottom = 93.0
mouse_filter = 2

[node name="CommsRange" type="Area2D" parent="." index="6"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CommsRange" index="0"]
shape = SubResource( 3 )

[connection signal="area_entered" from="CommsRange" to="." method="_on_CommsRange_area_entered"]
[connection signal="area_exited" from="CommsRange" to="." method="_on_CommsRange_area_exited"]
